--- a/src/assets/scss/partials/_mixin.scss
+++ b/src/assets/scss/partials/_mixin.scss
@@ -6,7 +6,7 @@
 
 @mixin button {
   button {
-    margin: 0 10px;
+    margin-left: 10px;
     padding: 2px 5px;
     background-color: lightblue;
   }
